--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,40 @@
+body{
+    display:flex;
+    flex-direction: column;
+    height:100%;
+}
+
+#PluginContainer{
+    flex:1;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+
+#PluginFooter{
+    background-color: aliceblue;
+    padding: 10px;
+    font-size: 14px;
+    border-top:solid 1px royalblue;
+}
+
+#PluginFooter p{
+    color: #23d160;
+    font-weight:bold;
+}
+
+#PluginFooter .fa-plug{
+    font-size: 40px;
+    color: #23d160;
+    float: left;
+    margin: 10px;
+    margin-right: 20px;
+}
+
+#PluginFooter li {
+    padding:0;
+    margin-right:20px;
+}
+
 #MainLoader.control.is-loading{
     width: 66%;
     font-size:4rem;
@@ -54,7 +91,7 @@ li .field {
 
 .pluginName{
     font-weight:bold;
-    width: 165px;
+    width: 220px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -62,7 +99,7 @@ li .field {
 
 .pluginDescription{
     font-size:12px;
-    width: 200px;
+    width: 260px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
