--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,9 +83,20 @@ li .field {
 
 .pluginDescription{
     font-size:12px;
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+
+.pluginSeeMoreContainer {
+    display: block;
+    clear: left;
+    padding-top: 10px;
+}
+
+.pluginSeeMoreContainer a {
+    color: #4676a9;
 }
 
 .githubButton{
@@ -150,17 +161,6 @@ li .field {
 .pluginList li .preview{
     display:none;
     background-color:white;
-    position:absolute;
-    top:30px;
-    left:20px;
-    right:20px;
-    border:solid 1px #ccc;
-    z-index:2;
-    padding: 20px;
-    transform: scale(.8);
-    transform-origin: top;
-    outline:none;
-    cursor:default;
     max-height:300px;
     overflow-y: scroll;
 }
@@ -172,7 +172,19 @@ li .field {
 }
 
 .pluginList li.active .preview{
-    display:block;
+    display: block;
+    border: 1px solid #4676a9;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 40px;
+}
+
+.pluginList li.active .preview:hover {
+    border: 1px solid #c3e8f4;
+}
+
+.pluginList li.active .preview:focus {
+    border: 1px solid #c3e8f4;
 }
 
 .pluginList li .columns{
@@ -262,6 +274,10 @@ li .field {
     top: 2px;
     margin-top: 9px;
     padding-top: 3px;
+}
+
+.preview li{
+    padding: 0 !important;
 }
 
 .preview h1{
