FORMIT-12192 Adds Vue plugin and shortens description to 280 chars

--- a/dev/stylesheet.css
+++ b/dev/stylesheet.css
@@ -137,6 +137,7 @@ li .field {
     text-overflow: ellipsis;
     margin-bottom: 10px;
     margin-top: 5px;
+    white-space: pre-wrap;
 }
 
 .pluginSeeMoreContainer {
